--- a/wp-content/themes/theme_JPO/style.css
+++ b/wp-content/themes/theme_JPO/style.css
@@ -978,8 +978,15 @@ body{
 	font-weight: 400;
 }
 
-header{
-
+.site-header{
+	display: flex;
+	top: 0;
+	height: 100px;
+	background-color: white;
+	width: 100%;
+	position: fixed;
+	z-index: 2;
+	padding-bottom: 25px;
 }
 
 .reseauxfixed{
@@ -1056,13 +1063,13 @@ footer{
 	margin-left: auto;
 }
 .footerflex a{
-	font-family: 'Pathway Gothic One', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	text-decoration: none;
 	color: black;
 	margin-right: 60px;
 }
 footer>p{
-	font-family: 'Pathway Gothic One', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 0.8em;
 	padding-left: 10px;
 	padding-bottom: 3px;
