--- a/wp-content/themes/theme_JPO/style.css
+++ b/wp-content/themes/theme_JPO/style.css
@@ -978,6 +978,13 @@ body{
 	font-weight: 400;
 }
 
+#masthead div.site-branding a img{
+	height: 75px;
+	width: auto;
+	margin-left: 40px;
+	margin-top: 1px;
+}
+
 .site-header{
 	display: flex;
 	top: 0;
