--- a/wp-content/themes/theme_JPO/style.css
+++ b/wp-content/themes/theme_JPO/style.css
@@ -1063,7 +1063,7 @@ footer{
 	display: block;
 	height: 50px;
 	width: 100px;
-	background-image: url("http://localhost/test-theme/wp-content/uploads/2020/11/IUT_standard_CMJN.png");
+	background-image: url("http://jpo-virtuelles.joseph-mcdonough.com/wp-content/uploads/2020/11/IUT_standard_CMJN.png");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	text-indent: -9999px;
@@ -1074,7 +1074,7 @@ footer{
 	margin: 10px;
 	height: 50px;
 	width: 100px;
-	background-image: url("http://localhost/test-theme/wp-content/uploads/2020/12/logo_univ_footer.png");
+	background-image: url("http://jpo-virtuelles.joseph-mcdonough.com/wp-content/uploads/2020/12/logo_univ_footer.png");
 	background-repeat: no-repeat;
 	background-size: 100%;
 	text-indent: -9999px;
